@@ -14,6 +14,7 @@ Changes in 4.1:
 - Improve display of errors in the syndication plugin when downloading a feed fails (246421)
 - Make ChunkDownloadView and PeerView use a QSortFilterProxyModel (246835)
 - Add download and move when completed location history buttons to FileSelectDlg (218048)
+- Make file view of FileSelectDlg sortable (248090)
 
 Changes in 4.0.3:
 - Fix bug causing wrong encoding to be used when the default save location of a group is read (244873)
